--- a/SpringTest/pom.xml
+++ b/SpringTest/pom.xml
@@ -183,5 +183,15 @@
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>4.1.10.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>4.1.10.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>slf4j-impl</artifactId>
+			<version>2.0-alpha2</version>
+		</dependency>
 	</dependencies>
 </project>
