--- a/SpringTest/pom.xml
+++ b/SpringTest/pom.xml
@@ -106,7 +106,7 @@
 	<dependency>
 		<groupId>cglib</groupId>
 		<artifactId>cglib</artifactId>
-		<version>2.2</version>
+		<version>2.2.2</version>
 	</dependency>
 	<!-- Hibernate library dependecy end -->
  
@@ -192,6 +192,11 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>slf4j-impl</artifactId>
 			<version>2.0-alpha2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search</artifactId>
+			<version>4.2.0.Final</version>
 		</dependency>
 	</dependencies>
 </project>
